# nostr-daily-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  MULTI_USER_PLAN.md  NIP07_PRESIGN_PLAN.md  README.md  SPEC.md  config.toml  docker-compose.prod.yml  docker-compose.yml  fly.toml  plan-nostr-bot-config-module.md  plan-nostr-bot-observability.md  plan-nostr-bot-scheduler-module.md  plan-nostr-client-module.md  plan-project-architecture.md
.github/workflows/: cron-post.yml  deploy.yml  fly-deploy.yml  lint.yml  test.yml
docs/plans/: 2026-04-21-btcpay-tipping-design.md  2026-04-21-btcpay-tipping-implementation.md
migrations/: 001_initial.sql  002_presigning.sql  003_payments.sql
src/: auth.rs  cli.rs  main.rs  models.rs  persistence.rs  state.rs  web.rs
src/api/: handlers.rs  mod.rs  routes.rs  tips.rs
src/btcpay/: client.rs  error.rs  mod.rs  webhook.rs
src/config/: btcpay.rs  loader.rs  mod.rs  types.rs  validation.rs
src/db/: challenges.rs  history.rs  mod.rs  payments.rs  pool.rs  quotes.rs  signed_events.rs  users.rs
src/nostr/: error.rs  mod.rs
src/observability/: mod.rs  spans.rs
src/scheduler/: error.rs  mod.rs  presign.rs
static/: index.html
