[package]
name = "nostr-daily-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["1Lubo <1lubo@pm.me>"]
description = "A bot that posts daily messages to Nostr relays"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "signal", "sync"] }

# Nostr protocol
nostr-sdk = "0.39"

# Scheduling
tokio-cron-scheduler = "0.13"
chrono-tz = "0.10"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = { version = "8.5", features = ["axum"] }
mime_guess = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Utilities
uuid = { version = "1.11", features = ["v4"] }
cron = "0.13"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"

[profile.release]
lto = true
codegen-units = 1
strip = true

